Switch to test bundle

--- a/BestPractices.xcodeproj/xcshareddata/xcschemes/BestPractices.xcscheme
+++ b/BestPractices.xcodeproj/xcshareddata/xcschemes/BestPractices.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "4C18B1AB1BC4E2CB00CF54F4"
+               BuildableName = "BestPracticesTests.xctest"
+               BlueprintName = "BestPracticesTests"
+               ReferencedContainer = "container:BestPractices.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
