--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,17 @@
 checkout:
   post:
     - git submodule update --init
-    - brew update
-    - brew install ios-sim
 test:
   override:
-    - bundle exec rake
+    - set -o pipefail &&
+      xcodebuild
+        CODE_SIGNING_REQUIRED=NO
+        CODE_SIGN_IDENTITY=
+        PROVISIONING_PROFILE=
+        -sdk iphonesimulator
+        -destination 'platform=iOS Simulator,OS=8.1,name=iPhone 6'
+        -project BestPractices.xcodeproj
+        -scheme "BestPractices"
+        clean build test |
+      tee $CIRCLE_ARTIFACTS/xcode_raw.log |
+      xcpretty --color --report junit --output $CIRCLE_TEST_REPORTS/xcode/results.xml
