--- a/circle.yml
+++ b/circle.yml
@@ -4,17 +4,5 @@ machine:
 checkout:
   post:
     - git submodule update --init
-test:
-  override:
-    - set -o pipefail &&
-      xcodebuild
-        CODE_SIGNING_REQUIRED=NO
-        CODE_SIGN_IDENTITY=
-        PROVISIONING_PROFILE=
-        -sdk iphonesimulator
-        -destination 'platform=iOS Simulator,OS=9.0,name=iPhone 6'
-        -project BestPractices.xcodeproj
-        -scheme "BestPractices"
-        clean build test |
-      tee $CIRCLE_ARTIFACTS/xcode_raw.log |
-      xcpretty --color --report junit --output $CIRCLE_TEST_REPORTS/xcode/results.xml
+    - brew update
+    - brew upgrade xctool
